deployment.yaml
#####
# Goods Service
#####
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kiss-cloud
  labels:
    app: goods
  name: goods
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: goods
  strategy:
    type: RollingUpdate
  template:
    metadata:
      namespace: kiss-cloud
      labels:
        app: goods
    spec:
      containers:
      - image: michaelilyin/kiss-spring-demo-goods:latest
        imagePullPolicy: Always
        name: kiss-cloud-goods
---
apiVersion: v1
kind: Service
metadata:
  namespace: kiss-cloud
  labels:
    app: goods
  name: goods
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: goods
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: kiss-cloud
  name: kiss-cloud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2$3
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: goods
spec:
  tls:
    - hosts:
        - cl.michaelilyin.ru
      secretName: cl-tls
  rules:
    - host: cl.michaelilyin.ru
      http:
        paths:
          - path: /(api|auth)/intra(/|$)(.*)
            backend:
              serviceName: goods
              servicePort: 8080


---

#####
# Auth Service
#####
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kiss-cloud
  labels:
    app: auth
  name: auth
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: auth
  strategy:
    type: RollingUpdate
  template:
    metadata:
      namespace: kiss-cloud
      labels:
        app: auth
    spec:
      containers:
        - image: jboss/keycloak:latest
          imagePullPolicy: Always
          name: kiss-cloud-auth
---
apiVersion: v1
kind: Service
metadata:
  namespace: kiss-cloud
  labels:
    app: auth
  name: auth
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: auth
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: kiss-cloud
  name: kiss-cloud-auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /auth/$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: auth
spec:
  tls:
    - hosts:
        - auth.michaelilyin.ru
      secretName: auth-tls
  rules:
    - host: auth.michaelilyin.ru
      http:
        paths:
          - path: /auth/(.*)
            backend:
              serviceName: auth
              servicePort: 8080
